solc_mutator_ossfuzz_seed_corpus/test_sol/test_241ce265c8dd01058715b1648a7ae7c6bc1b6b1931db5c48608024142926bf7e_8812141ee1292d4cf93f50cf4a112b2b6fd1d8b4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes memory i0,bool i1,bool i2)  returns(bool o0)
{

  {


  }

  unchecked {
{


  o0 = false;
}

o0 = ((1172389701131398668923577000415065482200810560202 * (577296164458783889077100652116930902541531778237 + 1388693912799972667947783086189238928312573591025)) >= 905326255739823785504930542572357980060285305866);
{


  {

    {




    }
  }

}
  }

}
pragma abicoder v2;
pragma solidity >= 0.0.0;
contract C0 {
}
// ----
// TypeError 2271: (su0.sol:134-342): Operator >= not compatible with types int_const 2304...(89 digits omitted)...0924 and int_const 9053...(40 digits omitted)...5866
